# deno-ffi

./: .gitignore  Cargo.toml  LICENSE  README.md  mod.ts
.github/workflows/: ci.yml
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: lib.rs
tests/: Cargo.toml  build.ts  test.ts  util.ts
tests/src/: lib.rs
ts/: convert.ts  lib.ts  types.ts  util.ts
