[package]
name = "deno-ffi"
version = "0.1.0"
authors = ["manyuanrong <416828041@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dlopen = "0.1.8"
deno_core = "0.68.0"
serde = "1.0.117"
libc = "0.2.80"